--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Meaningly",
+    "name": "Meanify",
     "version": "0.0.1",
     "manifest_version": 2,
     "icons": {
@@ -14,16 +14,30 @@
             "48": "./images/icon2-48.png",
             "128": "./images/icon2-128.png"
         },
-        "default_title": "Meaningly"
+        "default_title": "Meanify"
     },
+    "background": {
+        "page": "html/background.html",
+        "persistent": false
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "js/myscript.js"
+            ]
+        }
+    ],
     "options_page": "./html/test.html",
     "permissions": [
         "activeTab",
-        "storage"
-    ],
-    "optional_permissions": [
+        "storage",
+        "contextMenus",
         "http://*/*",
-        "https://*/*"
+        "https://*/*",
+        "tabs"
     ],
     "content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://kit.fontawesome.com;  object-src 'self'"
 }
