--- a/manifest.json
+++ b/manifest.json
@@ -45,10 +45,8 @@
         "tabs"
     ],
     "web_accessible_resources": [
-        "//ssl.gstatic.com/dictionary/static/sounds/20200429/nutshell--_gb_1.mp3",
-        "tileset/*.json",
-        "layer/*.json",
-        "sound/*.ogg"
+        "*.mp3",
+        "*.ogg"
     ],
     "content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://kit.fontawesome.com;  object-src 'self'"
 }
