--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Meanify",
+    "name": "Meanify - Dictionary",
     "version": "0.1.0",
     "manifest_version": 2,
     "description": "View meanings easily as you browse the web and store them for later also.",
