--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Meanify - Dictionary",
-    "version": "0.1.2",
-    "manifest_version": 2,
+    "version": "0.1.3",
+    "manifest_version": 3,
     "description": "View meanings easily as you browse the web and store them for later also.",
     "icons": {
         "16": "./images/icon2-1.png",
@@ -10,7 +10,7 @@
         "256": "./images/icon2-4.png",
         "512": "./images/icon2-5.png"
     },
-    "browser_action": {
+    "action": {
         "default_popup": "html/popup.html",
         "default_icon": {
             "16": "./images/icon2-1.png",
@@ -22,8 +22,7 @@
         "default_title": "Meanify"
     },
     "background": {
-        "page": "html/background.html",
-        "persistent": false
+        "service_worker": "js/background.js"
     },
     "content_scripts": [
         {
@@ -38,11 +37,12 @@
     "options_page": "./html/content.html",
     "permissions": [
         "storage",
-        "contextMenus"
+        "contextMenus",
+        "tabs",
+        "scripting"
     ],
-    "web_accessible_resources": [
-        "*.mp3",
-        "*.ogg"
-    ],
-    "content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net https://kit.fontawesome.com;  object-src 'self'"
+    "host_permissions": [
+        "http://*/",
+        "https://*/"
+    ]
 }
